[package]
name = "fatline-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake3 = { version = "1.5.0" }
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["client"]

server = []
client = []